--- a/remove_tenant.yml
+++ b/remove_tenant.yml
@@ -10,7 +10,7 @@
    vars_prompt:
      - name: "apic_ip"
        prompt: "Enter APIC IP"
-       default: '10.10.20.14'
+       default: 'sandboxapicdc.cisco.com'
        private: no
 
      - name: "user"
@@ -20,10 +20,10 @@
 
      - name: "pass"
        prompt: "Enter your APIC Password"
-       default: 'C1sco12345'
+       default: '!v3G@!4@Y'
        private: yes
        unsafe: yes
-
+       
      - name: "tn_name"
        prompt: "Enter Tenant Name"
        default: 'Ameen_Mit_Bonus_Tenant'
