--- a/mit_Bonus.yml
+++ b/mit_Bonus.yml
@@ -33,7 +33,7 @@
    vars_prompt:
      - name: "apic_ip"
        prompt: "Enter APIC IP"
-       default: '10.10.20.14'
+       default: 'sandboxapicdc.cisco.com'
        private: no
 
      - name: "user"
@@ -43,7 +43,7 @@
 
      - name: "pass"
        prompt: "Enter your APIC Password"
-       default: 'C1sco12345'
+       default: '!v3G@!4@Y'
        private: yes
        unsafe: yes
 
